--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
+    android:layout_height="210dip"
+    android:layout_marginTop="10dip"
+    android:background="#DDDDDD">
+    
     <TextView
-        android:layout_width="fill_parent"
+        android:id="@+id/text_view_username"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
-
-</LinearLayout>
+        android:textSize="10pt"
+        android:textColor="#444444"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="9dip"
+        android:layout_marginTop="20dip"
+        android:layout_marginLeft="10dip"
+        android:text="@string/text_username"/>
+    
+    <EditText
+        android:id="@+id/edit_text_username"
+        android:layout_width="150dip"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background"
+        android:layout_toRightOf="@id/text_view_username"
+        android:layout_alignTop="@id/text_view_username"
+        android:inputType="text"/>
+     
+     <TextView
+        android:id="@+id/text_view_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10pt"
+        android:textColor="#444444"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/text_view_username"
+        android:layout_marginRight="9dip"
+        android:layout_marginTop="15dip"
+        android:layout_marginLeft="10dip"
+        android:text="@string/text_password"/>
+    
+    <EditText
+        android:id="@+id/edit_text_password"
+        android:layout_width="150dip"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/editbox_background"
+        android:layout_toRightOf="@id/text_view_password"
+        android:layout_alignTop="@id/text_view_password"
+        android:layout_below="@id/edit_text_username"
+        android:layout_marginLeft="17dip"
+        android:password="true"
+        android:inputType="textPassword"
+        />
+    
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edit_text_password"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="15dip"
+        android:layout_marginLeft="110dip"
+        android:text="@string/text_login"/>
+     
+     <TextView
+        android:id="@+id/text_view_error"
+        android:layout_width="fill_parent"
+        android:layout_height="40dip"
+        android:textSize="7pt"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/button_login"
+        android:layout_marginRight="9dip"
+        android:layout_marginTop="15dip"
+        android:layout_marginLeft="15dip"
+        android:textColor="#AA0000"
+        android:text=""/>
+</RelativeLayout>
