Added MBTExam Activity

--- a/res/layout/mbt_test.xml
+++ b/res/layout/mbt_test.xml
@@ -1,38 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:gravity="top" >
 
     <TextView
-        android:id="@+id/editText1"
+        android:id="@+id/question_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_alignWithParentIfMissing="true" />
+
+    <TextView
+        android:id="@+id/white_space"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/question_no"
+        android:text="@string/white_space" />
+
+    <TextView
+        android:id="@+id/question"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/white_space" />
 
     <RadioGroup
-        android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/question" >
+
         <RadioButton
-        	android:id="@+id/A"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        />
-    	<RadioButton
-        	android:id="@+id/B"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        />
-    	<RadioButton
-        	android:id="@+id/C"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        />
-    	<RadioButton
-        	android:id="@+id/D"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        />
+            android:id="@+id/A"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/B"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/C"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/D"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RadioGroup>
-</LinearLayout>
+
+</RelativeLayout>
