--- a/res/layout/mbt_test.xml
+++ b/res/layout/mbt_test.xml
@@ -24,6 +24,7 @@
         android:layout_toRightOf="@id/white_space" />
 
     <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/question" >
