--- a/res/layout/test.xml
+++ b/res/layout/test.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top" >
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/android:list">
-    </ListView>
+    android:gravity="top"
+    android:orientation="vertical" >
+
+    <ListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
     <Button
         android:id="@+id/submit"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Submit"/>
+        android:layout_height="wrap_content"
+        android:text="Submit" />
+
 </LinearLayout>
