--- a/res/layout/test.xml
+++ b/res/layout/test.xml
@@ -16,6 +16,6 @@
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:text="@string/submit" />
 
 </LinearLayout>
